规整代码，调整授权跳转逻辑

--- a/pages/career/career.wxml
+++ b/pages/career/career.wxml
@@ -1,16 +1,20 @@
 <div class="container">
+
     <header>
-        <div>我的</div>
-        <div>职业/身份是：</div>
+         <div>注册</div>
+        <div>我的职业/特长是</div>
     </header>
     <input class="input"
-        placeholder="比如：综艺节目编导/养猫达人"
+        placeholder="比如室内设计师/摄影达人等"
         bindinput="careerInput"
         value="{{career}}"/>
+        <details class="reminder">
+        <summary>知交：互相分享经验，顺便交个朋友</summary>
+    </details>
     <div
         class="submit-btn {{disabled ? 'disabled' : ''}}"
         bindgetphonenumber="submit"
         bindtap="submit">
-            继续
+            下一步
     </div>
 </div>
