--- a/app.wxss
+++ b/app.wxss
@@ -4,7 +4,7 @@
     min-height: 100vh;
     overflow: hidden;
     box-sizing: border-box;
-    background: #f4f5f6;
+    background: #ffffff;
 }
 
 section,
