--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -3,7 +3,7 @@
 .container {
     display: flex;
     flex-direction: column;
-    padding: 35px 42px 0;
+    padding: 13px 37px 0;
     position: fixed;
     /* background: #f37737; */
     /* border-bottom: 1px solid #333; */
@@ -27,11 +27,11 @@
     top: 0;
     width: 100%;
     height: 100%;
-    border-radius: 10px;
-    box-shadow: 1px 1px 15px #d8d8d8;
+    border-radius: 14px;
+    box-shadow:0px 1px 13px rgba(0,0,0,0.16);
     text-align: center;
     transition: .5s;
-    background: #fff;
+    background: rgb(255, 255, 255);
 }
 
 /* 第二和第三张卡缩小 */
@@ -62,94 +62,120 @@
     flex: 1;
     overflow: hidden;
     color: #fff;
-    padding-right: 20%;
+    width: 240px;
+    /* padding-right: 20%; */
 }
 
 .card .img-container .img {
     overflow: hidden;
     position: relative;
-    height: 240px;
-    border-radius: 0  10px 10px 0;
+    height: 195px;
+    border-radius: 0  14px 14px 0;
 }
 
 
 .card .img-container .img-tag-left,
 .card .img-container .img-tag-right {
     position: absolute;
-    top: 63px;
-    padding: 23px;
-    background: #fff;
-    border-radius: 5px;
+    top: 55px;
+    padding: 17px;
+    background: rgb(255, 255, 255);
+    border-radius: 14px;
     text-align: center;
-    font-size: 18px;
-    z-index: 99;
-    font-weight: 700;
-    color: #000;
+   
+}
+
+.yuanyijiaohuan{
+    padding-top: 5px;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    font-weight: 900;
+}
+
+.buyuanjiaohuan{
+    padding-top: 5px;
+    color: rgb(0, 0, 0);
+    font-size: 15px;
+    font-weight: 900;
 }
 
 .card .img-container .img-tag-left {
-    right: 50px;
+    right: 18%;
 }
 
 .card .img-container .img-tag-left .icon-handshake {
-    font-weight: 600;
-    font-size: 30px;
+    font-weight: 900;
+    font-size: 19px;
     margin-bottom: 11px;
-    color: #3BCC6B;
+    color: rgb(51, 173, 92);
 }
 
 .card .img-container .img-tag-right {
-    left: 50px;
+    right: 18%;
 }
 
 .card .img-container .img-tag-right .icon-close {
-    font-weight: 600;
-    font-size: 30px;
+    font-weight: 900;
+    font-size: 19px;
     margin-bottom: 11px;
-    color: #F13F40;
+    color: rgb(202, 50, 50);
 }
 
 .card .img-container .user-info-container {
-    padding: 14px 33px;
+    padding: 10px 33px;
     font-size: 16px;
     color: #848484;
     flex: 1;
 }
+.name{
+    font-size: 15px;
+    color: #848484;
+    font-weight: 450;
+    padding-right:7px; 
+}
+
+.iconfont{
+    position: relative;
+    bottom: 1.2px;
+}
 
 .card .text-container {
-    padding: 23px 33px;
+    padding: 24px 30px;
     overflow: hidden;
+    height: 17%;
 }
 
 .card .text-container .sub {
     color: #B4B4B4;
-    font-size: 16px;
+    font-weight: 500;
+    font-size: 15px;
 }
 
 .card .text-container .title {
     color: #000;
-    font-weight: 700;
-    font-size: 26px;
-    margin: 3px 0;
+    font-weight: 500;
+    font-size: 23px;
+    margin: 2px 0;
 }
 .card .identification {
-    color: #AFAFAF;
-    font-size: 12px;
-    padding: 0 33px 23px 33px;
+    color: rgb(197, 197, 197);
+    font-size: 11px;
+    font-weight: 450;
+    padding: 0 33px 20px 33px;
 }
 
 
 /* ==== 按钮部分 ==== */
 .btn-container {
     /* background: #48e76b; */
-    flex: 0 0 100px;
+    flex: 0 0 107px;
     justify-content: center;
     text-align: center;
     overflow: hidden;
     flex-direction: row;
-    padding-top: 14px;
+    padding-top: 12px;
     position: relative;
-    bottom: -14px;
+    bottom: -17px;
 }
 
 .btn-container .btn {
@@ -158,39 +184,39 @@
     justify-content: center;
     box-sizing: content-box;
     vertical-align: top;
-    box-shadow: 1px 3px 8px rgba(0, 0, 0, .16);
-    height: 34px;
-    line-height: 34px;
+    box-shadow:0px 1px 14px rgba(0,0,0,0.16);
+    height: 31px;
+    line-height: 31px;
     background: #fff;
     text-align: center;
 }
 
 .btn-container .icon-close {
     display: inline-block;
-    width: 34px;
-    margin-right: 3%;
+    width: 31px;
+    margin-right: 6%;
     background: #fff;
     color:  #F13F40;
     border-radius: 100%;
-    font-weight: 600;
-    font-size: 24px;
+    font-weight: 900;
+    font-size: 18px;
 }
 
 .btn-container .icon-exchange {
     display: inline-block;
     border-radius: 40px;
     font-size: 16px;
-    font-weight: 400;
+    font-weight: 900;
     color: #000;
-    width: 64%;
+    width: 53%;
     padding-left: 10px;
 }
 .btn-container .icon-exchange .icon-handshake {
-    font-size: 26px;
+    font-size: 18px;
     vertical-align: middle;
     margin-right: 10px;
-    font-weight: 600;
-    color: #39da74;
+    font-weight: 900;
+    color:#3BCC6B;
 }
 
 
@@ -283,7 +309,7 @@
 }
 
 .submit-btn-continue {
-    margin: 20px 45px;
+    margin: 60px 45px;
     color: #fff;
     border: 0;
     background: #f37737;
