--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -8,6 +8,7 @@
     width: 100%;
     height: 340px;
     overflow: hidden;
+    border-radius:8px;
 }
 
 /* 卡片 */
@@ -23,6 +24,7 @@
 /* 卡片标题 */
 .card-section .title {
     font-size: 18px;
+    font-weight: 500;
     line-height: 1em;
     padding: 20px 17px;
     /* border-bottom: 1px solid #f0f0f0; */
@@ -30,11 +32,10 @@
 
 .card-section .content {
     font-size: 16px;
-    color: #555555;
+    color: #5c5c5c;
     line-height: 1.5em;
     margin: 0 17px;
     padding: 10px 0;
-    border-bottom: 1px solid #f1f1f1;
 }
 
 .card-section .content:last-of-type {
@@ -44,7 +45,7 @@
 .card-section .content label {
     display: inline-block;
     min-width: 30px;
-    color: #999;
+    color: rgb(179, 179, 179);
 }
 .modifi-btn {
   color: #f77738;
@@ -57,8 +58,8 @@
     position: absolute;
     top: 30px;
     right: 30px;
-    padding: 5px 10px 10px;
-    border-radius: 4px;
+    padding: 5px 8px 8px;
+    border-radius: 6px;
     line-height: 18px;
     background-color: rgba(0, 0, 0, .7)
 }
