--- a/pages/my-knowledge/my-knowledge.wxss
+++ b/pages/my-knowledge/my-knowledge.wxss
@@ -20,7 +20,7 @@
     margin: 10px 0 5px;
     border: none;
     border-radius: 5px;
-    background: #fff;
+    background: rgb(250, 250, 250);
     font-size: 18px;
     line-height: 58px;
     color: #000;
