--- a/pages/real-name/real-name.wxml
+++ b/pages/real-name/real-name.wxml
@@ -1,12 +1,12 @@
 <!-- 真实姓名 -->
 <div class="container real-name">
     <input class="input"
-        placeholder="真实姓名"
+        placeholder="昵称"
         bindinput="nameInput"
         value="{{realname}}"
         auto-focus/>
     <input class="input"
-        placeholder="公司职业（产品经理)"
+        placeholder="身份"
         bindinput="careerInput"
         value="{{career}}"/>
     <div
