--- a/pages/real-name/real-name.wxss
+++ b/pages/real-name/real-name.wxss
@@ -12,7 +12,7 @@
     border: none;
     border-radius: 5px;
     line-height: 58px;
-    background: #fff;
+    background: rgb(250, 250, 250);
 }
 
 .input-placeholder {
