--- a/pages/title/title.wxss
+++ b/pages/title/title.wxss
@@ -7,14 +7,14 @@
 
 .container > header {
     color: #000;
-    font-size: 40px;
+    font-size: 38px;
     line-height: 1.4em;
     font-weight: 600;
 }
 
 .input {
-    border-bottom: 2px solid #979797;
-    margin: 80px 0 15px;
+    border-bottom: 2px solid #b3b3b3;
+    margin: 80px 0 0px;
     font-size: 18px;
 }
 
@@ -24,12 +24,13 @@
 
 .reminder {
     display: block;
-    margin-bottom: 30px;
+    margin-bottom: 60px;
 }
 
 .reminder > summary {
-    color: #555;
-    font-size: 16px;
+    color: rgb(161, 161, 161);
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .reminder > section {
